--- a/index.html
+++ b/index.html
@@ -38,37 +38,22 @@
 		<div class="container row">
             
             <!-- CPP Game Dev -->
-			<div class="col s12 m6 l4">  
+			<div class="col s12 m6 l6">  
 			  <a href="http://www.cppgamedev.com/">
 				<div class="card waves-effect waves-dark small">
 					<div class="card-image">
 						<img class="responsive-img" src="./images/projects/cppgamedev/thumb.png">
 					</div>
-					<div class="card-content">
-						<span class="card-title black-text"><b>CPP Game Dev Club</b></span>
+                    <div class="card-content">
+                        <span class="card-title black-text"><b>CPP Game Dev Club</b></span>
 						<p class="black-text">Cal Poly Pomona Game Design and Development Club website.</p>
 					</div>
 				</div>
 			  </a>
 			</div>
-			
-			<!-- Google Applied CS-->
-			<div class="col s12 m6 l4">  
-			  <a href="https://cswithandroid.withgoogle.com">
-				<div class="card waves-effect waves-dark small">
-					<div class="card-image">
-						<img class="responsive-img" src="./images/projects/google/thumb.jpg">
-					</div>
-					<div class="card-content">
-						<span class="card-title black-text"><b>Google Applied CS</b></span>
-						<p class="black-text">A collection of Android apps from Google's Applied CS course.</p>
-					</div>
-				</div>
-			  </a>
-			</div>
-			
-			<!-- Hearthstone Cards-->
-			<div class="col s12 m6 l4">  
+            
+            <!-- Hearthstone Cards-->
+			<div class="col s12 m6 l6">  
 			  <a href="./projects/hearthstone.html">
 				<div class="card waves-effect waves-dark small">
 					<div class="card-image">
@@ -76,14 +61,29 @@
 					</div>
 					<div class="card-content">
 						<span class="card-title black-text"><b>Hearthstone Cards</b></span>
-						<p class="black-text">Some custom cards created for Hearthstone. (For Design Internship)</p>
+						<p class="black-text">Some custom cards created for Blizzard Entertainment's Hearthstone Game Design internship application.</p>
+					</div>
+				</div>
+			  </a>
+			</div>
+			
+			<!-- Google Applied CS-->
+			<div class="col s12 m6 l6">  
+			  <a href="https://cswithandroid.withgoogle.com">
+				<div class="card waves-effect waves-dark small">
+					<div class="card-image">
+						<img class="responsive-img" src="./images/projects/google/thumb.jpg">
+					</div>
+					<div class="card-content">
+						<span class="card-title black-text"><b>Google Applied CS</b></span>
+						<p class="black-text">A collection of Android apps from Google's Applied CS program at Cal Poly Pomona.</p>
 					</div>
 				</div>
 			  </a>
 			</div>
 		
 			<!-- FTL Captain's Edition-->
-			<div class="col s12 m6 l4">  
+			<div class="col s12 m6 l6">  
 			  <a href="http://www.ftlgame.com/forum/viewtopic.php?t=15663">
 				<div class="card waves-effect waves-dark small">
 					<div class="card-image">
@@ -91,29 +91,29 @@
 					</div>
 					<div class="card-content">
 						<span class="card-title black-text"><b>FTL Captain's Edition</b></span>
-						<p class="black-text">A mod I helped design and create for the indie game Faster Than Light.</p>
+						<p class="black-text">A mod I helped design and create for the popular indie game Faster Than Light.</p>
 					</div>
 				</div>
 			  </a>
 			</div>
 			
 			<!-- Everyone's A Hero -->
-			<div class="col s12 m6 l4">  
+			<div class="col s12 m6 l6">  
 			  <a href="">
 				<div class="card waves-effect waves-dark small">
 					<div class="card-image">
 						<img class="responsive-img" src="">
 					</div>
 					<div class="card-content">
-						<span class="card-title black-text"><b>WIP Everyone's A Hero</b></span>
-						<p class="black-text">A Boss Rush style game project created with my club.</p>
+						<span class="card-title black-text"><b>WIP Land of Monsters</b></span>
+						<p class="black-text">A Boss Rush style game project created with my club, utilizing all original assets and code.</p>
 					</div>
 				</div>
 			  </a>
 			</div>	
 			
 			<!-- Siege-->
-			<div class="col s12 m6 l4">  
+			<div class="col s12 m6 l6">  
 			  <a href="">
 				<div class="card waves-effect waves-dark small">
 					<div class="card-image">
@@ -121,7 +121,7 @@
 					</div>
 					<div class="card-content">
 						<span class="card-title black-text"><b>WIP Siege</b></span>
-						<p class="black-text">A Tower Defense Card Game, combining two classic genres!</p>
+						<p class="black-text">A Tower Defense Card Game I am designing, which combines two of my favorite classic game genres!</p>
 					</div>
 				</div>
 			  </a>
