--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		<div class="container portfolio">
 			<h5>&nbsp;</h5>        
 			<h5>Kyle Turchik</h5>
-			
+			<h6>SOFTWARE ENGINEER &#8226; GAME DESIGNER &#8226; HACKATHON MENTOR</h6>
+            
             <div class="row center border">
 				<a class="col s12 m4 black-text" href="./resume.pdf"><i class="mdi-action-description"></i> R&#233;sum&#233;</a>
 				<a class="col s12 m4 black-text" href="https://github.com/klturchik"><i class="mdi-hardware-keyboard"></i> github.com/klturchik</a>
@@ -91,7 +92,7 @@
 					</div>
 					<div class="card-content">
 						<span class="card-title black-text"><b>FTL Captain's Edition</b></span>
-						<p class="black-text">A mod I helped design and create for the popular indie game Faster Than Light.</p>
+						<p class="black-text">A popular mod I helped design and create for the indie game Faster Than Light.</p>
 					</div>
 				</div>
 			  </a>
