--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/freelancer.css" rel="stylesheet">
+    <link href="css/freelancer.min.css" rel="stylesheet">
 
   </head>
 
@@ -59,97 +59,7 @@
       </div>
     </nav>
 
-    <!-- Header 
-    <header class="masthead">
-      <div class="container header-content">
-        <img class="img-fluid" src="img/profile.png" alt="">
-        <div class="intro-text">
-          <span class="name">Kyle Turchik</span>
-          <span class="skills">Software Engineer &amp; Game Designer</span><br>
-          <hr class="divider-light">
-            
-            <!-- Carousel 
-            <div id="carousel-main" class="carousel carousel-profile slide" data-ride="carousel">
-              <!-- Indicators 
-              <ol class="carousel-indicators">
-                <li data-target="#carousel-main" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-main" data-slide-to="1"></li>
-                <li data-target="#carousel-main" data-slide-to="2"></li>
-                <li data-target="#carousel-main" data-slide-to="3"></li>
-                <li data-target="#carousel-main" data-slide-to="4"></li>
-                <li data-target="#carousel-main" data-slide-to="5"></li>
-              </ol>
-
-              <!-- Wrapper for slides 
-              <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                  <img class="d-block img-fluid" src="img/portfolio/Main/0.jpg" alt="InVRasion">
-                </div>
-
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" src="img/portfolio/Main/1.jpg" alt="Main Menu">
-                </div>
-
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" src="img/portfolio/Main/2.jpg" alt="VR shooting">
-                </div>
-
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" src="img/portfolio/Main/3.jpg" alt="Splitscreen">
-                </div>
-
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" src="img/portfolio/Main/4.jpg" alt="VR Grab">
-                </div>
-
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" src="img/portfolio/Main/5.jpg" alt="Non-VR grabbed">
-                </div>
-              </div>
-
-              <!-- Left and right controls 
-              <a class="carousel-control-prev" href="#carousel-main" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carousel-main" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-            <!-- /Carousel 
-            
-            <ul class="list-inline">
-                <li class="list-inline-item">
-                    <a target="_blank" href="mailto:kturchik@sbcglobal.net?" style="color: white;">
-                        <i class="fa fa-fw fa-envelope"></i> <span><b>kturchik@sbcglobal.net</b></span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="tel:1-951-316-1112" style="color: white;"> 
-                        <i class="fa fa-fw fa-phone"></i>: <span><b>(951)-316-1112</b></span>
-                    </a>
-                </li>
-            </ul>
-            <ul class="list-inline">
-                <li class="list-inline-item">
-                    <a target="_blank" href="files/Kyle Turchik - Resume.pdf" class="btn btn-social"><i class="fa fa-fw fa-file-text"></i> Resume
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.linkedin.com/in/kyleturchik/" class="btn btn-social"><i class="fa fa-fw fa-linkedin"></i> LinkedIn
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://github.com/klturchik" class="btn btn-social"><i class="fa fa-fw fa-github"></i> GitHub
-                    </a>
-                </li>
-            </ul>
-        </div>
-      </div>
-    </header> -->
-
-    <!-- Portfolio Grid Section -->
+    <!-- Portfolio Section -->
     <section id="portfolio">
       <div class="container">
         <h2 class="text-center">Portfolio</h2>
@@ -307,18 +217,17 @@
       </div>
     </section>
 
-    <!-- Footer 
     <footer class="text-center">
       <div class="footer-below">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              Copyright &copy; klturchik.github.io 2017
+
             </div>
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top d-lg-none">
