Fixed github link

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </a>
             </li>
             <li class="list-inline-item">
-                <a target="_blank" href="https://github.com/klturchik" class="btn btn-social"><i class="fa fa-fw fa-github" style="font-size: 19px"></i> GitHub
+                <a target="_blank" href="https://github.com/kturchik" class="btn btn-social"><i class="fa fa-fw fa-github" style="font-size: 19px"></i> GitHub
                 </a>
             </li>
         </ul>
