Added video autoplay

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   <h4></h4>
                   <hr class="divider-primary">
                   <div id="carousel1" class="carousel slide" role="listbox">
-                      <video class="embed-responsive" controls>
+                      <video id="video1" class="embed-responsive" controls>
                         <source src="videos/RedDwarf.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                       </video>
@@ -425,7 +425,7 @@
                   <hr class="divider-primary">
                   <h4><i class="fa fa-trophy"></i> 3rd Place Overall</h4>	
                   <div id="carousel1" class="carousel slide" role="listbox">
-                      <video class="embed-responsive" controls>
+                      <video id="video2" class="embed-responsive" controls>
                         <source src="videos/ElementalFury.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                       </video>
