Added scroll reveal functions

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2 class="text-center">Portfolio</h2>
         <hr class="divider-primary">
         <div class="row">
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item sr-icon">
             <a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -75,7 +75,7 @@
               <img src="img/portfolio/RedDwarf/RedDwarf.png" class="img-fluid" alt="Red Dwarf">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item sr-icon">
             <a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -85,7 +85,7 @@
               <img src="img/portfolio/BattleOfTheBards/BattleOfTheBards.jpg" class="img-fluid" alt="Battle Of The Bards">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item sr-icon">
             <a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -95,7 +95,7 @@
               <img src="img/portfolio/ElementalFury/ElementalFury.png" class="img-fluid" alt="InVRasion">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item sr-icon">
             <a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -105,7 +105,7 @@
               <img src="img/portfolio/InVRasion/InVRasion.png" class="img-fluid" alt="InVRasion">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item sr-icon">
             <a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -115,7 +115,7 @@
               <img src="img/portfolio/SeismicShift/SeismicShift.png" class="img-fluid" alt="Seismic Shift">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item sr-icon">
             <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -135,15 +135,15 @@
         <h2 class="text-center">About</h2>
         <hr class="divider-light">
         <ul class="list-inline social-links ">
-            <li class="list-inline-item">
+            <li class="list-inline-item sr-button">
                 <a target="_blank" href="files/Kyle Turchik - Resume.pdf" class="btn btn-social"><i class="fa fa-fw fa-file-text" style="font-size: 14px"></i> Resume
                 </a>
             </li>
-            <li class="list-inline-item">
+            <li class="list-inline-item sr-button">
                 <a target="_blank" href="https://www.linkedin.com/in/kyleturchik/" class="btn btn-social"><i class="fa fa-fw fa-linkedin" style="font-size: 18px"></i> LinkedIn
                 </a>
             </li>
-            <li class="list-inline-item">
+            <li class="list-inline-item sr-button">
                 <a target="_blank" href="https://github.com/kturchik" class="btn btn-social"><i class="fa fa-fw fa-github" style="font-size: 19px"></i> GitHub
                 </a>
             </li>
@@ -166,12 +166,12 @@
         <hr class="divider-primary">
         <div class="text-center" style="margin-top: -0.25rem; font-size: 18px;">
             <ul class="list-inline">
-                <li class="list-inline-item">
+                <li class="list-inline-item sr-contact">
                     <a target="_blank" href="mailto:kturchik@sbcglobal.net?" style="color: #212529;">
                         <i class="fa fa-fw fa-envelope"></i> <span><b>kturchik@sbcglobal.net</b></span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-inline-item sr-contact">
                     <a target="_blank" href="tel:1-951-316-1112" style="color: #212529;"> <!-- sms texts instead of tel -->
                         <i class="fa fa-fw fa-phone"></i>: <span><b>(951)-316-1112</b></span>
                     </a>
@@ -736,9 +736,14 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript -->
+    <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
+      
+    <!-- Bootstrap -->
     <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+      
+    <!-- Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
