Cleaned up file names

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <hr class="divider-light">
         <ul class="list-inline social-links ">
             <li class="list-inline-item sr-button">
-                <a target="_blank" href="files/Kyle Turchik - Resume.pdf" class="btn btn-social"><i class="fa fa-fw fa-file-text" style="font-size: 14px"></i> Resume
+                <a target="_blank" href="files/KyleTurchik_Resume.pdf" class="btn btn-social"><i class="fa fa-fw fa-file-text" style="font-size: 14px"></i> Resume
                 </a>
             </li>
             <li class="list-inline-item sr-button">
