--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </a>
           </div>
           <div class="col-sm-4 portfolio-item sr-icon">
-            <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+            <a class="portfolio-link" href="https://subsetgames.com/forum/viewtopic.php?t=15663" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
@@ -136,7 +136,7 @@
         <hr class="divider-light">
         <ul class="list-inline social-links ">
             <li class="list-inline-item sr-button">
-                <a target="_blank" href="files/KyleTurchik_Resume.pdf" class="btn btn-social"><i class="fa fa-fw fa-file-text" style="font-size: 14px"></i> Resume
+                <a target="_blank" href="files/KyleTurchik_Resume_SoftwareEngineer.pdf" class="btn btn-social"><i class="fa fa-fw fa-file-text" style="font-size: 14px"></i> Resume
                 </a>
             </li>
             <li class="list-inline-item sr-button">
@@ -150,10 +150,11 @@
         </ul>
         <div class="row">
           <div class="col-lg ml-auto">
-            <p>I'm an avid Software Engineer who has had a passion for programming and game development all my life.<br><br>
-            With more than 5 years of experience creating games, I am eager to learn and try new approaches to implementing projects. I am proficient with Unity and Unreal Engine and have experimented extensively with VR development. I have attended a dozen hackathons and game jams where my teams' innovative games have often ranked amongst the top three projects overall.<br><br>
-            My colleagues know me to be a quick learner, friendly, organized, open minded, and passionate. I enjoy collaborating with others to create awesome applications and mentoring or inspiring others to enable them to make their own awesome projects.<br><br>
-            As President of the Game Design &amp; Development Club at Cal Poly Pomona I founded and organized the Student Game Developer Alliance Summit, where over 200 students were, and will continue to be, educated on various professions in the gaming industry, and inspired to collaborate with each other on game development projects through workshops provided by industry leaders.</p>
+            <p>I'm an avid programmer who has had a passion for game development all my life. My colleagues know me to be a quick learner, friendly, organized, open-minded, and inspired.<br><br>
+            I enjoy collaborating with others and have experience working with large multidisciplinary teams. Having attended nearly a dozen hackathons and game jams, my teams' accomplishments include winning ‘Best Game Hack’ and ‘2nd Place Overall’ at HackPoly 2017, as well as winning ‘3rd Place Overall’ at BeachHacks 2017.<br><br>
+            Through my personal projects, I have become proficient with Unity and Unreal Engine and have experimented extensively with VR development. I have also interned for Blizzard Entertainment, where I became experienced with web engineering and WebGL, and was selected to participate in Google’s Applied CS program, where I learned to develop Android applications.<br><br>
+            As President of the Game Design &amp; Development Club at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 80+ students. I also founded the Student Game Developer Alliance which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.<br><br>
+            I recently graduated from Cal Poly Pomona with a degree in Computer Science and I am currently pursuing a full-time programming position. If you are interested in working with me to create epic gaming experiences I can't wait to hear from you!</p>
           </div>
         </div>
       </div>
@@ -258,38 +259,47 @@
                             Your browser does not support the video tag.
                       </video>
                   </div>
-                  <p>Red Dwarf is an upcoming virtual reality space shooter game. The player controls their spaceship from inside the cockpit, with VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach as high of a score as possible before dying.<br><br>Red Dwarf was originally developed as the final project for my Game Development course at Cal Poly Pomona.
-                  </p>
+                  <h5>About the project</h5>
+                    <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the hihghest score possible before dying.</p>
+                  <h5>Contribution</h5>
+                    <p>I worked with a team of 3 other engineers and a 3D artist to create Red Dwarf. As the team was very small we often shared responsibilities. My contributions include most of the design and implementation for the player UI and collision physics, as well as the implementation of player controls and weapon mechanics.</p>
+                  <h5>Accomplishments/Challenges</h5>
+                    <p>Our biggest challenge was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I am most proud of designing the radar which gives players 360 degree awareness of their surrounding.</p>
+                  <h5>What's next?</h5>
+                    <p>My team and I have been working on and off to flesh out Red Dwarf with more weapons, enemy types, and missions. We are currently also experimenting with procedural generation of planets and debris. We hope to release an alpha version of the game some time in the next year.</p>
                     <ul class="list-inline item-details">    
-                    <form action="builds/SeismicShift.zip">
+                    <form action="builds/RedDwarf.zip">
                         <h3>
                         <i class="fa fa-download"></i>
                         <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
                         </h3>
                     </form>
+                    <p>
+                        <i class="fa fa-gamepad"></i> Note: Supports both HTC Vive as well as keyboard/mouse controls.
+                    </p>
+                    <!--
                     <li>
                         <i class="fa fa-external-link"></i>
                         Project Site:
                         <strong><a></a>
                         </strong>
                     </li>
-                    <!--
                     <li>                    
                         <i class="fa fa-television"></i>
                         Play in browser:
-                        <strong><a href="webplayer/BattleOfTheBards/BattleOfTheBards.html">Battle Of The Bards</a>
+                        <strong><a href="webplayer/RedDwarf/RedDwarf.html">Red Dwarf</a>
                         </strong>
                     </li>
-                    -->
                     <br>
+                    -->
                     <li>Tools:
                       <strong>
-                        <span>Unity</span>
+                        <span>Unity, C#, Visual Studio, SteamVR, VRTK, HTC Vive</span>
                       </strong>
                     </li>
                     <li>Date:
                       <strong>
-                        <span>January 2017</span>
+                        <span>May 2017</span>
                       </strong>
                     </li>
                   </ul>
@@ -361,12 +371,15 @@
                       </a>
                     </div>
                     <!-- /Carousel -->
-                    
-                    <p>A clash between Rhythm and RPG genres, this game lets you fight an RPG boss battle with the power of rock! Players fight a monster by using spell cards which are cast by playing rhythm game segments using a guitar controller or keyboard. Their song performance affects the strength of the spell. 
-                    <br><br> Battle Of The Bards was created in just 24 hours at the HackPoly 2017 hackathon, and won <strong>'Best Game Hack'</strong> vs 71 competing projects. 
-                    <br><br> Created using Unity3D Game Engine and C#.
-                    <br><br> <i class="fa fa-gamepad"></i> Note: Supports USB Guitar Hero or Rock Band controllers as well as keyboard controls.
-                    </p>
+                    <p>Battle Of The Bards was created in just 24 hours at the HackPoly 2017 hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
+                    <h5>About the project</h5>
+                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of card by playing rhythm game segments with a guitar controller of keyboard. Their performance determines the effectiveness of the spells.                 </p>
+                  <h5>Contribution</h5>
+                    <p>I worked with another engineer and 2 artists to create Battle of the Bards. My contributions include most of the design and implementation for the player UI and spell mechanics.</p>
+                  <h5>Accomplishments/Challenges</h5>
+                    <p>Our biggest challenge was coordinating our team to work effectively during the 24 hour time limit. All of our art and code was original and created by our team during the 24 hour competition. I believe the fact that we were all good friends contributed to our success.</p>
+                  <h5>What's next?</h5>
+                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally hope to release the game as a mobile app to make it easily accessible to the most people.</p>
                     <ul class="list-inline item-details">    
                     <form action="builds/BattleOfTheBards.zip">
                         <h3>
@@ -374,6 +387,9 @@
                         <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
                         </h3>
                     </form>
+                    <p>
+                        <i class="fa fa-gamepad"></i> Note: Supports both USB Guitar Hero or Rock Band controllers as well as keyboard controls.
+                    </p>
                     <li>
                         <i class="fa fa-external-link"></i>
                         Project Site:
@@ -389,12 +405,12 @@
                     <br>
                     <li>Tools:
                       <strong>
-                        <span>Unity</span>
+                        <span>Unity, C#, Visual Studio</span>
                       </strong>
                     </li>
                     <li>Date:
                       <strong>
-                        <span>January 2017</span>
+                        <span>February 2017</span>
                       </strong>
                     </li>
                   </ul>
@@ -432,17 +448,21 @@
                   </div>
                   <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock other player out of the arena, the last player standing is the winner.<br><br>Elemental Fury was created in just 36 hours at the BeachHacks 2017 hackathon, and won <strong>'3rd Place Overall'</strong> vs. 38 competing projects.<br><br>Created using Unity3D Game Engine and C#. 
                   </p>
-                    <ul class="list-inline item-details">    
+                    <ul class="list-inline item-details"> 
+                    <!--
                     <form action="builds/SeismicShift.zip">
                         <h3>
                         <i class="fa fa-download"></i>
                         <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
                         </h3>
                     </form>
+                    -->
+                    <li>
                         <i class="fa fa-external-link"></i>
                         Project Site:
                         <strong><a href="https://devpost.com/software/elemental-showdown">Elemental Fury | BeachHacks 2017 Devpost</a>
                         </strong>
+                    </li>
                     <!--
                     <li>                    
                         <i class="fa fa-television"></i>
@@ -454,12 +474,12 @@
                     <br>
                     <li>Tools:
                       <strong>
-                        <span>Unity</span>
+                        <span>Unity, C#, Visual Studio, SteamVR, VRTK, HTC Vive</span>
                       </strong>
                     </li>
                     <li>Date:
                       <strong>
-                        <span>January 2017</span>
+                        <span>April 2017</span>
                       </strong>
                     </li>
                   </ul>
@@ -543,7 +563,7 @@
                     <p>InVRasion is a work in progress virtual reality game for the HTC VIVE. It is an asynchronous multiplayer game in which a single VR player competes against up to four other players who use co-operative splitscreen. The VR player plays as a giant, city destroying monster, while the other players play as soldiers who attempt to defeat the monster before it destroys an objective. 
                     <br><br> InVRasion has been in development since January of 2017 as a Senior Project for my degree in Computer Science at Cal Poly Pomona. After receiving academic credit for InVRasion, development has continued as a hobby since March of 2017.
                     <br><br> Created using Unity3D Game Engine and C#. 
-                    <br><br> <i class="fa fa-exclamation-triangle"></i> Note: Requires an HTC VIVE to play.</p>
+                    </p>
                     <ul class="list-inline item-details">    
                     <form action="builds/InVRasion.zip">
                         <h3>
@@ -551,14 +571,17 @@
                         <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
                         </h3>
                     </form>
+                    <p>
+                        <i class="fa fa-exclamation-triangle"></i> Note: Requires an HTC VIVE to play.
+                    </p>
                     <li>Tools:
                       <strong>
-                        <span>Unity, HTC Vive, SteamVR</span>
+                        <span>Unity, C#, Visual Studio, SteamVR, VRTK, HTC Vive</span>
                       </strong>
                     </li>
                     <li>Date:
                       <strong>
-                        <span>March 2017</span>
+                        <span>September 2016</span>
                       </strong>
                     </li>
                   </ul>
@@ -657,7 +680,7 @@
                     <br>
                     <li>Tools:
                       <strong>
-                        <span>Unity</span>
+                        <span>Unity, C#, Visual Studio</span>
                       </strong>
                     </li>
                     <li>Date:
