Fixed some typos

--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@
                   <h5>About the project</h5>
                     <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the hihghest score possible before dying.</p>
                   <h5>Contribution</h5>
-                    <p>I worked with a team of 3 other engineers and a 3D artist to create Red Dwarf. As the team was very small we often shared responsibilities. My contributions include most of the design and implementation for the player UI and collision physics, as well as the implementation of player controls and weapon mechanics.</p>
+                    <p>I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. As the team was very small we often shared responsibilities. My contributions include most of the design and implementation for the player UI and collision physics, as well as the implementation of player controls and weapon mechanics.</p>
                   <h5>Accomplishments/Challenges</h5>
-                    <p>Our biggest challenge was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I am most proud of designing the radar which gives players 360 degree awareness of their surrounding.</p>
+                    <p>Our biggest challenge was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I am most proud of designing the radar which gives players 360 degree awareness of their surroundings.</p>
                   <h5>What's next?</h5>
-                    <p>My team and I have been working on and off to flesh out Red Dwarf with more weapons, enemy types, and missions. We are currently also experimenting with procedural generation of planets and debris. We hope to release an alpha version of the game some time in the next year.</p>
+                    <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris. We hope to release an alpha version of the game some time in the next year.</p>
                     <ul class="list-inline item-details">    
                     <form action="builds/RedDwarf.zip">
                         <h3>
@@ -373,13 +373,13 @@
                     <!-- /Carousel -->
                     <p>Battle Of The Bards was created in just 24 hours at the HackPoly 2017 hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
                     <h5>About the project</h5>
-                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of card by playing rhythm game segments with a guitar controller of keyboard. Their performance determines the effectiveness of the spells.                 </p>
+                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller of keyboard. Their performance determines the effectiveness of the spells.                 </p>
                   <h5>Contribution</h5>
                     <p>I worked with another engineer and 2 artists to create Battle of the Bards. My contributions include most of the design and implementation for the player UI and spell mechanics.</p>
                   <h5>Accomplishments/Challenges</h5>
-                    <p>Our biggest challenge was coordinating our team to work effectively during the 24 hour time limit. All of our art and code was original and created by our team during the 24 hour competition. I believe the fact that we were all good friends contributed to our success.</p>
+                    <p>Our biggest challenge was coordinating our team to work effectively during the 24 hour time frame. All of our art and code was original and created by our team during the 24 hour competition. I believe the fact that we were all good friends contributed to our success and ability to work together.</p>
                   <h5>What's next?</h5>
-                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally hope to release the game as a mobile app to make it easily accessible to the most people.</p>
+                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally hope to release the game as a mobile app to make it easily accessible to as many people as possible.</p>
                     <ul class="list-inline item-details">    
                     <form action="builds/BattleOfTheBards.zip">
                         <h3>
