Fixed more typos

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                             Your browser does not support the video tag.
                       </video>
                   </div>
-                  <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock other player out of the arena, the last player standing is the winner.<br><br>Elemental Fury was created in just 36 hours at the BeachHacks 2017 hackathon, and won <strong>'3rd Place Overall'</strong> vs. 38 competing projects.<br><br>Created using Unity3D Game Engine and C#. 
+                  <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock other players out of the arena, the last player standing is the winner.<br><br>Elemental Fury was created in just 36 hours at the BeachHacks 2017 hackathon, and won <strong>'3rd Place Overall'</strong> vs. 38 competing projects.
                   </p>
                     <ul class="list-inline item-details"> 
                     <!--
@@ -559,10 +559,8 @@
                       </a>
                     </div>
                     <!-- /Carousel -->
-                    
-                    <p>InVRasion is a work in progress virtual reality game for the HTC VIVE. It is an asynchronous multiplayer game in which a single VR player competes against up to four other players who use co-operative splitscreen. The VR player plays as a giant, city destroying monster, while the other players play as soldiers who attempt to defeat the monster before it destroys an objective. 
-                    <br><br> InVRasion has been in development since January of 2017 as a Senior Project for my degree in Computer Science at Cal Poly Pomona. After receiving academic credit for InVRasion, development has continued as a hobby since March of 2017.
-                    <br><br> Created using Unity3D Game Engine and C#. 
+                    <p>InVRasion is a work in progress virtual reality game for the HTC Vive. It is an asynchronous multiplayer game in which a single VR player competes against up to four other players through co-operative splitscreen. The VR player plays as a giant, city destroying monster, while the other players play as soldiers who attempt to defeat the monster before it destroys an objective. 
+                    <br><br>InVRasion was originally developed as my Senior Project for my degree in Computer Science at Cal Poly Pomona. After receiving academic credit for InVRasion, development has continued as a hobby since January of 2017.
                     </p>
                     <ul class="list-inline item-details">    
                     <form action="builds/InVRasion.zip">
@@ -572,7 +570,7 @@
                         </h3>
                     </form>
                     <p>
-                        <i class="fa fa-exclamation-triangle"></i> Note: Requires an HTC VIVE to play.
+                        <i class="fa fa-exclamation-triangle"></i> Note: Requires an HTC Vive to play.
                     </p>
                     <li>Tools:
                       <strong>
