Fixed even more typos

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                       </video>
                   </div>
                   <h5>About the project</h5>
-                    <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the hihghest score possible before dying.</p>
+                    <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying.</p>
                   <h5>Contribution</h5>
                     <p>I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. As the team was very small we often shared responsibilities. My contributions include most of the design and implementation for the player UI and collision physics, as well as the implementation of player controls and weapon mechanics.</p>
                   <h5>Accomplishments/Challenges</h5>
@@ -371,9 +371,9 @@
                       </a>
                     </div>
                     <!-- /Carousel -->
-                    <p>Battle Of The Bards was created in just 24 hours at the HackPoly 2017 hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
+                    <p>Battle Of The Bards was originally created in just 24 hours at the HackPoly 2017 hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
                     <h5>About the project</h5>
-                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller of keyboard. Their performance determines the effectiveness of the spells.                 </p>
+                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller or keyboard. Their performance determines the effectiveness of the spells.                 </p>
                   <h5>Contribution</h5>
                     <p>I worked with another engineer and 2 artists to create Battle of the Bards. My contributions include most of the design and implementation for the player UI and spell mechanics.</p>
                   <h5>Accomplishments/Challenges</h5>
@@ -446,7 +446,7 @@
                             Your browser does not support the video tag.
                       </video>
                   </div>
-                  <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock other players out of the arena, the last player standing is the winner.<br><br>Elemental Fury was created in just 36 hours at the BeachHacks 2017 hackathon, and won <strong>'3rd Place Overall'</strong> vs. 38 competing projects.
+                  <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock other players out of the arena, the last player standing is the winner.<br><br>Elemental Fury was originally created in just 36 hours at the BeachHacks 2017 hackathon, and won <strong>'3rd Place Overall'</strong> vs. 38 competing projects.
                   </p>
                     <ul class="list-inline item-details"> 
                     <!--
