--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                       </a>
                     </div>
                     <!-- /Carousel -->
-                    <p>InVRasion is a work in progress virtual reality game for the HTC Vive. It is an asynchronous multiplayer game in which a single VR player competes against up to four other players through co-operative splitscreen. The VR player plays as a giant, city destroying monster, while the other players play as soldiers who attempt to defeat the monster before it destroys an objective. 
+                    <p>InVRasion is a work in progress virtual reality game for the HTC Vive. It is an asynchronous multiplayer game in which a single VR player competes against up to four other players through co-operative splitscreen. The VR player plays as a giant, city destroying monster, while up to 4 other players play as different classes of super soldiers and attempt to defeat the monster before it destroys an objective. 
                     <br><br>InVRasion was originally developed as my Senior Project for my degree in Computer Science at Cal Poly Pomona. After receiving academic credit for InVRasion, development has continued as a hobby since January of 2017.
                     </p>
                     <ul class="list-inline item-details">    
@@ -649,11 +649,8 @@
                       </a>
                     </div>
                     <!-- /Carousel -->
-                    
-                    <p>An Infinite Runner game themed on an earthquake destroying a city. Players drive a car through procedurally generated city roads attempting to survive. Seismic waves propagate down the roads, throwing everything in its path into the air.
-                    <br><br>Seismic Shift was created in just 36 hours at Global Game Jam 2017 at UC Irvine. The theme of the game jam for this year was 'Waves'.
-                    <br><br> Created using Unity3D Game Engine and C#.							
-                    </p>
+                    <p>An Infinite Runner game themed around an earthquake destroying a city. Players drive a car through procedurally generated city roads attempting to survive. Seismic waves propagate down the roads, throwing everything in their path into the air.
+                    <br><br>Seismic Shift was created in just 36 hours at Global Game Jam 2017 at UC Irvine. The theme of the game jam for this year was 'Waves'.</p>
                     <ul class="list-inline item-details">    
                     <form action="builds/SeismicShift.zip">
                         <h3>
