--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </a>
           </div>
           <div class="col-sm-4 portfolio-item sr-icon">
-            <a class="portfolio-link" href="https://subsetgames.com/forum/viewtopic.php?t=15663" data-toggle="modal">
+            <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
@@ -708,38 +708,73 @@
                 <div class="modal-body">
                   <h2>FTL Captain's Edition</h2>
                   <hr class="divider-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/submarine.png" alt="">
-                  <p>PLACEHOLDER</p>
-                  <ul class="list-inline item-details">    
-                    <form action="builds/SeismicShift.zip">
-                        <h3>
+
+                    <!-- Carousel -->
+                    <div id="carousel6" class="carousel slide" data-ride="carousel">
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#carousel6" data-slide-to="0" class="active"></li>
+                        <!--
+                        <li data-target="#carousel6" data-slide-to="1"></li>
+                        <li data-target="#carousel6" data-slide-to="2"></li>
+                        <li data-target="#carousel6" data-slide-to="3"></li>
+                        -->
+                      </ol>
+
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                          <img class="d-block img-fluid" src="img/portfolio/FTL/0.png" alt="Seismic Shift">
+                        </div>
+                        <!--
+                        <div class="carousel-item">
+                          <img class="d-block img-fluid" src="img/portfolio/FTL/1.png" alt="Screenshot 1">
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block img-fluid" src="img/portfolio/FTL/2.png" alt="Screenshot 2">
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block img-fluid" src="img/portfolio/FTL/3.png" alt="Screenshot 3">
+                        </div>
+                        -->
+                      </div>
+
+                      <!-- Left and right controls -->
+                      <a class="carousel-control-prev" href="#carousel6" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carousel6" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
+                    <!-- /Carousel -->
+                    
+                    <p>Captain's Edition is by far the most popular mod for the indie game FTL - Faster Than Light, with a current user base of approximately 20,000. It vastly expands upon the content of the game by adding hundreds of additional scenarios including new lore, weapons, graphics, and equipment to the game as well as new mechanics. It has received glamourous reviews from video game critics, including John 'TotalBiscuit' Bain.</p>
+                    <ul class="list-inline item-details">    
+                    <h3>
                         <i class="fa fa-download"></i>
-                        <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
-                        </h3>
-                    </form>
+                        <a class="btn btn-success btn-lg" href="https://subsetgames.com/forum/viewtopic.php?t=15663">Download Demo</a>
+                    </h3>
+                    <p>
+                        <i class="fa fa-exclamation-triangle"></i> Note: Requires FTL with Slipstream Mod Manager to play.
+                    </p>
                     <li>
                         <i class="fa fa-external-link"></i>
                         Project Site:
-                        <strong><a></a>
+                        <strong><a href="https://subsetgames.com/forum/viewtopic.php?t=15663">FTL Captain's Edition | FTL Mod Forum</a>
                         </strong>
                     </li>
-                    <!--
-                    <li>                    
-                        <i class="fa fa-television"></i>
-                        Play in browser:
-                        <strong><a href="webplayer/BattleOfTheBards/BattleOfTheBards.html">Battle Of The Bards</a>
-                        </strong>
-                    </li>
-                    -->
                     <br>
                     <li>Tools:
                       <strong>
-                        <span>Unity</span>
+                        <span>Java</span>
                       </strong>
                     </li>
                     <li>Date:
                       <strong>
-                        <span>January 2017</span>
+                        <span>2016</span>
                       </strong>
                     </li>
                   </ul>
