Added FTL review link

--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
                     </div>
                     <!-- /Carousel -->
                     
-                    <p>Captain's Edition is by far the most popular mod for the indie game FTL - Faster Than Light, with a current user base of approximately 20,000. It vastly expands upon the content of the game by adding hundreds of additional scenarios including new lore, weapons, graphics, and equipment to the game as well as new mechanics. It has received glamourous reviews from video game critics, including John 'TotalBiscuit' Bain.</p>
+                    <p>Captain's Edition is by far the most popular mod for the indie game FTL - Faster Than Light, with a current user base of approximately 20,000. It vastly expands upon the content of the game by adding hundreds of additional scenarios including new lore, weapons, graphics, and equipment to the game as well as new mechanics. It has received glamourous reviews from video game critics, including <a href="https://www.youtube.com/watch?v=xEJgk7oZe6w">John 'TotalBiscuit' Bain</a>.</p>
                     <ul class="list-inline item-details">    
                     <h3>
                         <i class="fa fa-download"></i>
