--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
           <div class="col-lg ml-auto">
             <p>I'm an avid programmer who has had a passion for game development all my life. My colleagues know me to be a quick learner, friendly, organized, open-minded, and inspired.<br><br>
             Through my personal projects, I have become proficient with Unity and have experimented extensively with VR development. I have also interned for Blizzard Entertainment, where I became experienced with web engineering and WebGL, and was selected to participate in Google’s Applied CS program, where I learned to develop Android applications.<br><br>
-            I enjoy collaborating with others and have experience working with large multidisciplinary teams. Having attended nearly a dozen hackathons and game jams, my teams' accomplishments include winning ‘Best Game Hack’ and ‘2nd Place Overall’ at HackPoly 2017, as well as winning ‘3rd Place Overall’ at BeachHacks 2017.<br><br>
-            As President of the Game Design &amp; Development Club at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 80+ students. I also founded the Student Game Developer Alliance which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.<br><br>
+            I enjoy collaborating with others and have experience working with large multidisciplinary teams. Having attended nearly a dozen hackathons and game jams, my teams' accomplishments include winning ‘Best Game Hack’ and ‘2nd Place Overall’ at HackPoly 2017, as well as winning ‘3rd Place Overall’ at BeachHacks 2017.
+            <br><br>
+            As President of the Game Design &amp; Development Club at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 80+ students. I also founded the Student Game Developer Alliance which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.
+            <br><br>
             I recently graduated from Cal Poly Pomona with a degree in Computer Science and I am currently pursuing a full-time programming position. If you are interested in working with me to create epic gaming experiences I can't wait to hear from you!</p>
           </div>
         </div>
@@ -268,12 +270,12 @@
                   <h5>What's next?</h5>
                     <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris. We hope to release an alpha version of the game some time in the next year.</p>
                     <ul class="list-inline item-details">    
-                    <form action="builds/RedDwarf.zip">
-                        <h3>
+                    <a href="builds/RedDwarf.zip">
+                        <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
+                        Download Demo
                         </h3>
-                    </form>
+                    </a>
                     <p>
                         <i class="fa fa-gamepad"></i> Note: Supports both HTC Vive as well as keyboard/mouse controls.
                     </p>
@@ -381,12 +383,12 @@
                   <h5>What's next?</h5>
                     <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally hope to release the game as a mobile app to make it easily accessible to as many people as possible.</p>
                     <ul class="list-inline item-details">    
-                    <form action="builds/BattleOfTheBards.zip">
-                        <h3>
+                    <a href="builds/BattleOfTheBards.zip">
+                        <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
+                        Download Demo
                         </h3>
-                    </form>
+                    </a>
                     <p>
                         <i class="fa fa-gamepad"></i> Note: Supports both USB Guitar Hero or Rock Band controllers as well as keyboard controls.
                     </p>
@@ -563,12 +565,12 @@
                     <br><br>InVRasion was originally developed as my Senior Project for my degree in Computer Science at Cal Poly Pomona. After receiving academic credit for InVRasion, development has continued as a hobby since January of 2017.
                     </p>
                     <ul class="list-inline item-details">    
-                    <form action="builds/InVRasion.zip">
-                        <h3>
+                    <a href="builds/InVRasion.zip">
+                        <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
+                        Download Demo
                         </h3>
-                    </form>
+                    </a>
                     <p>
                         <i class="fa fa-exclamation-triangle"></i> Note: Requires an HTC Vive to play.
                     </p>
@@ -652,12 +654,12 @@
                     <p>An Infinite Runner game themed around an earthquake destroying a city. Players drive a car through procedurally generated city roads attempting to survive. Seismic waves propagate down the roads, throwing everything in their path into the air.
                     <br><br>Seismic Shift was created in just 36 hours at Global Game Jam 2017 at UC Irvine. The theme of the game jam for this year was 'Waves'.</p>
                     <ul class="list-inline item-details">    
-                    <form action="builds/SeismicShift.zip">
-                        <h3>
+                    <a href="builds/SeismicShift.zip">
+                        <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        <input type="submit" value="Download Demo" class="btn btn-success btn-lg"/>
+                        Download Demo
                         </h3>
-                    </form>
+                    </a>
                     <li>
                         <i class="fa fa-external-link"></i>
                         Project Site:
@@ -753,10 +755,12 @@
                     
                     <p>Captain's Edition is by far the most popular mod for the indie game FTL - Faster Than Light, with a current user base of approximately 20,000. It vastly expands upon the content of the game by adding hundreds of additional scenarios including new lore, weapons, graphics, and equipment to the game as well as new mechanics. It has received glamourous reviews from video game critics, including <a href="https://www.youtube.com/watch?v=xEJgk7oZe6w">John 'TotalBiscuit' Bain</a>.</p>
                     <ul class="list-inline item-details">    
-                    <h3>
+                    <a href="https://subsetgames.com/forum/viewtopic.php?t=15663">
+                        <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        <a class="btn btn-success btn-lg" href="https://subsetgames.com/forum/viewtopic.php?t=15663">Download Demo</a>
-                    </h3>
+                        Download Demo
+                        </h3>
+                    </a>
                     <p>
                         <i class="fa fa-exclamation-triangle"></i> Note: Requires FTL with Slipstream Mod Manager to play.
                     </p>
