Adjusted font sizes

--- a/index.html
+++ b/index.html
@@ -261,39 +261,24 @@
                             Your browser does not support the video tag.
                       </video>
                   </div>
-                  <h5>About the project</h5>
+                  <h6>About the project</h6>
                     <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying.</p>
-                  <h5>Contribution</h5>
+                  <h6>Contribution</h6>
                     <p>I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. As the team was very small we often shared responsibilities. My contributions include most of the design and implementation for the player UI and collision physics, as well as the implementation of player controls and weapon mechanics.</p>
-                  <h5>Accomplishments/Challenges</h5>
+                  <h6>Accomplishments/Challenges</h6>
                     <p>Our biggest challenge was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I am most proud of designing the radar which gives players 360 degree awareness of their surroundings.</p>
-                  <h5>What's next?</h5>
+                  <h6>What's next?</h6>
                     <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris. We hope to release an alpha version of the game some time in the next year.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/RedDwarf.zip">
                         <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        Download Demo
+                        &nbsp;Download Demo
                         </h3>
                     </a>
                     <p>
                         <i class="fa fa-gamepad"></i> Note: Supports both HTC Vive as well as keyboard/mouse controls.
                     </p>
-                    <!--
-                    <li>
-                        <i class="fa fa-external-link"></i>
-                        Project Site:
-                        <strong><a></a>
-                        </strong>
-                    </li>
-                    <li>                    
-                        <i class="fa fa-television"></i>
-                        Play in browser:
-                        <strong><a href="webplayer/RedDwarf/RedDwarf.html">Red Dwarf</a>
-                        </strong>
-                    </li>
-                    <br>
-                    -->
                     <li>Tools:
                       <strong>
                         <span>Unity, C#, Visual Studio, SteamVR, VRTK, HTC Vive</span>
@@ -374,19 +359,19 @@
                     </div>
                     <!-- /Carousel -->
                     <p>Battle Of The Bards was originally created in just 24 hours at the HackPoly 2017 hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
-                    <h5>About the project</h5>
+                    <h6>About the project</h6>
                     <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller or keyboard. Their performance determines the effectiveness of the spells.                 </p>
-                  <h5>Contribution</h5>
+                  <h6>Contribution</h6>
                     <p>I worked with another engineer and 2 artists to create Battle of the Bards. My contributions include most of the design and implementation for the player UI and spell mechanics.</p>
-                  <h5>Accomplishments/Challenges</h5>
+                  <h6>Accomplishments/Challenges</h6>
                     <p>Our biggest challenge was coordinating our team to work effectively during the 24 hour time frame. All of our art and code was original and created by our team during the 24 hour competition. I believe the fact that we were all good friends contributed to our success and ability to work together.</p>
-                  <h5>What's next?</h5>
+                  <h6>What's next?</h6>
                     <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally hope to release the game as a mobile app to make it easily accessible to as many people as possible.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/BattleOfTheBards.zip">
                         <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        Download Demo
+                        &nbsp;Download Demo
                         </h3>
                     </a>
                     <p>
@@ -416,7 +401,7 @@
                       </strong>
                     </li>
                   </ul>
-                  <button class="btn btn-outline-dark" type="button" data-dismiss="modal">
+                  <button class="btn btn-outline-dark " type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
                 </div>
@@ -568,7 +553,7 @@
                     <a href="builds/InVRasion.zip">
                         <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        Download Demo
+                        &nbsp;Download Demo
                         </h3>
                     </a>
                     <p>
@@ -657,7 +642,7 @@
                     <a href="builds/SeismicShift.zip">
                         <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        Download Demo
+                        &nbsp;Download Demo
                         </h3>
                     </a>
                     <li>
@@ -755,10 +740,10 @@
                     
                     <p>Captain's Edition is by far the most popular mod for the indie game FTL - Faster Than Light, with a current user base of approximately 20,000. It vastly expands upon the content of the game by adding hundreds of additional scenarios including new lore, weapons, graphics, and equipment to the game as well as new mechanics. It has received glamourous reviews from video game critics, including <a href="https://www.youtube.com/watch?v=xEJgk7oZe6w">John 'TotalBiscuit' Bain</a>.</p>
                     <ul class="list-inline item-details">    
-                    <a href="https://subsetgames.com/forum/viewtopic.php?t=15663">
+                    <a href="https://subsetgames.com/forum/viewtopic.php?t=15663" value="">
                         <h3 class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i>
-                        Download Demo
+                        &nbsp;Download Demo
                         </h3>
                     </a>
                     <p>
